# sentiric-sip-registrar-service

./: .context.md  Cargo.toml  Dockerfile  README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs  tls.rs
src/data/: store.rs
src/grpc/: client.rs  mod.rs  service.rs
