# Dosya: Cargo.toml
[package]
name = "sentiric-sip-registrar-service"
version = "1.1.8" #[ARCH-COMPLIANCE] SemVer kuralları gereği versiyon artırıldı
edition = "2021"

[dependencies]
# Async & Network
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
hyper = { version = "0.14", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features =["env-filter", "json", "registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3" 

# Data & Config
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
#[KRİTİK DÜZELTME]: connection-manager özelliği eklendi
redis = { version = "0.26", features = ["tokio-rustls-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }

# --- THE IRON CORE ---
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.5.6" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.17.0" }